refactor: 쿼리 위치 변경